Fixes #6583 -- Recenter cards on mobile width.

--- a/frontend/src/scss/pages/_public.scss
+++ b/frontend/src/scss/pages/_public.scss
@@ -26,8 +26,9 @@ body.page-minimal {
       }
 
       @include media-breakpoint-only('xs') {
-        width: calc(100% - 40px);
-        margin-left: 0;
+        width: 100%;
+        margin-left: 15px;
+        margin-right: 15px;
       }
     }
   }
